# churn-prediction

./: .gitignore  Dockerfile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci-cd.yml
models/: XGBoost_model.pkl
notebooks/: Churn_Prediction.ipynb
src/: app.py  evaluate.py  main.py  mlflow.db  predict.py  preprocess.py  train.py
